# DD_Nav_WS

./: .gitattributes  .gitignore  .gitmodules  README.md
Path_Planning/: Makefile  dstar_output.pbm  header.hh  node.cpp  plan
Path_Planning/src/: a_star.cpp  d_star.cpp  dijkstra.cpp  node.cpp  node_map.cpp  priority_queue.cpp  random_maze_generator.cpp
Path_Planning/tests/: a_star_tests.cpp
Path_Planning/tests/Outputs/: dstar_output.pbm
Path_Planning/worlds/: Purdue_map.dae  purdue_map.gltf
ROS2_PX4_Offboard_Example/px4_offboard/px4_offboard/: control.py  velocity_control.py
dd_gazebo_ws/: frames_2024-03-26_17.40.12.gv
dd_gazebo_ws/dd_gazebo/: CMakeLists.txt
dd_gazebo_ws/dd_gazebo/config/: ekf.yaml  nav2_params.yaml
dd_gazebo_ws/dd_gazebo/launch/: simulation.launch.py
dd_gazebo_ws/dd_gazebo/src/: main.cpp
dd_gazebo_ws/dd_gazebo/src/description/: drone_description.urdf  typhoon_h480.sdf.jinja
dd_gazebo_ws/dd_gazebo/worlds/: my_world.world
dd_gazebo_ws/install/: local_setup.sh  setup.sh
dd_gazebo_ws/log/: latest_build
dd_gazebo_ws/src/dd_gazebo/: CMakeLists.txt  package.xml
dd_gazebo_ws/src/dd_gazebo/config/: ekf.yaml
dd_gazebo_ws/src/dd_gazebo/description/: drone_description.urdf  drone_model.urdf
dd_gazebo_ws/src/dd_gazebo/log/: latest_build
dd_gazebo_ws/src/drone_nav/: CMakeLists.txt  package.xml
dd_gazebo_ws/src/drone_nav/behavior_tree/: navigation_bt.xml
dd_gazebo_ws/src/drone_nav/behavior_trees/: navigation_bt.xml
dd_gazebo_ws/src/drone_nav/config/: nav2_params.yaml
dd_gazebo_ws/src/drone_nav/description/: drone_model.urdf  original_drone_model.urdf  typhoon_h480.sdf.jinja  typhoon_h480_2d.sdf.jinja
dd_gazebo_ws/src/drone_nav/include/drone_nav/: footprint_tf_broadcaster.hpp  odom_publisher_broadcaster.hpp  stabilized_tf_broadcaster.hpp
dd_gazebo_ws/src/drone_nav/launch/: navigation.launch.py
dd_gazebo_ws/src/drone_nav/src/: footprint_tf_broadcaster.cpp  odom_publisher_broadcaster.cpp  stabilized_tf_broadcaster.cpp
dd_gazebo_ws/src/px4_handler/: CMakeLists.txt  package.xml
log/: latest_build
(+20 files in other folders)
